[metadata]
name = pyCamSet
version = 0.5.1.0
author = Robin Laven
author_email = r.laven@auckland.ac.nz
description = Object oriented cameras for computer vision
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rlav440/pyCamSet
repository = https://github.com/rlav440/pyCamSet
license = "Apache-2.0"

[options]
packages = find:
python_requires = >=3.11
include_package_data = True
install_requires =
    numpy<1.24
    pyvista
    scipy
    matplotlib
    opencv-contrib-python<4.7
    tqdm
    numba
    natsort
    coloredlogs
    blosc
    uniplot
    scikit-learn
    dill

[options.packages.find]
exclude =
    tests*
    examples*
